--- a/src/components/Сabinet/Cabinet.module.css
+++ b/src/components/Сabinet/Cabinet.module.css
@@ -1,5 +1,5 @@
 .page {
-  @apply px-0 py-[122px];
+  @apply min-h-[76vh] px-0 py-[122px];
 }
 
 .container {
@@ -8,4 +8,89 @@
 
 .page_title {
   @apply relative mb-[220px] text-center text-[50px] leading-[1.15em] text-white before:mx-auto before:my-0 before:mb-[12px] before:block before:h-[103px] before:w-[89px] before:bg-[url('../../assets/before_after/panels/color-blue/line_three.svg')];
+}
+
+.economy_rub {
+  @apply relative mx-auto flex mb-[80px] justify-between px-4 border-2 border-gray-800 rounded-[8px] h-[106px] w-[728px]
+}
+
+.img_balance {
+  @apply py-[1px]  absolute h-24
+}
+
+.balance {
+  @apply absolute py-[12px] pl-[100px] text-footer-color text-[21px] font-semibold
+}
+
+.money {
+  @apply absolute py-[50px] pl-[100px] text-white text-[22px] font-semibold
+}
+
+.button {
+  @apply w-[217px] text-white  h-[46px] my-auto rounded-lg bg-gradient-to-r from-blue-600 to-purple-700 p-[2px] font-ProximSemiBold text-[20px] transition duration-300 ease-in-out shadow-md
+}
+
+.button:hover {
+  transition: 0.3s;
+  box-shadow: 0 0 14px #0c83ff;
+}
+
+
+.cabinet_tabs {
+  @apply flex flex-col items-center;
+}
+
+.tabsContainer {
+  @apply relative;
+}
+
+.grayLine {
+  @apply absolute top-12 h-[1px] ml-[-15px] w-[315px] bg-gray-800;
+}
+
+.activeLine {
+  @apply absolute bottom-[-2px] h-[3px] top-12;
+}
+
+
+.tabButton {
+  @apply text-footer-color py-[8px] px-[16px] border-none cursor-pointer text-[18px] font-ProximSemiBold
+}
+
+.activeTab {
+  @apply text-white text-[18px] font-ProximBold
+}
+
+.wrapper {
+  @apply flex flex-col
+}
+
+
+.title {
+  @apply relative mb-[26px] pl-7 text-white font-ProximBold text-[24px] before:-bottom-[10px] before:my-0 before:absolute before:mb-[12px] before:block  before:left-[-24px] before:h-[50px] before:w-[50px] before:bg-no-repeat before:bg-[url('../../assets/page_cabinet/icons/line_title.svg')]
+}
+
+.skin_btn {
+  @apply relative pl-[12px] w-[277px] text-[18px] font-ProximRegular h-[36px] border-2 rounded-[8px] border-none bg-gray-800 hover:bg-stone-600 hover:duration-0.3s hover:shadow-lg hover:shadow-stone-800 hover:text-gray-500 text-white inline-block before:top-[10px] before:my-0 before:absolute before:block  before:left-[60px] before:h-[50px] before:w-[50px] before:bg-no-repeat before:bg-[url('../../assets/page_cabinet/icons/skin.svg')]
+}
+
+.skin_btn_delete {
+  @apply relative pl-[12px] w-[277px] h-[36px] text-[18px] font-ProximRegular border-2 rounded-[8px] border-none bg-gray-800 hover:bg-stone-600 hover:duration-0.3s hover:shadow-lg hover:shadow-stone-800 hover:text-gray-500 ml-[16px] text-white inline-block before:top-[10px] before:my-0 before:absolute before:block  before:left-[60px] before:h-[50px] before:w-[50px] before:bg-no-repeat before:bg-[url('../../assets/page_cabinet/icons/delete.svg')]
+}
+
+.plaw_btn {
+  @apply relative pl-[12px] w-[277px] h-[36px] text-[18px] font-ProximRegular border-2 rounded-[8px] border-none bg-gray-800 hover:bg-stone-600 hover:duration-0.3s hover:shadow-lg hover:shadow-stone-800 hover:text-gray-500 text-white inline-block before:top-[10px] before:my-0 before:absolute before:block  before:left-[60px] before:h-[50px] before:w-[50px] before:bg-no-repeat before:bg-[url('../../assets/page_cabinet/icons/plaw.svg')]
+}
+
+.plaw_btn_delete {
+  @apply relative pl-[12px] w-[277px] h-[36px] text-[18px] font-ProximRegular border-2 rounded-[8px] border-none bg-gray-800 hover:bg-stone-600 hover:duration-0.3s hover:shadow-lg hover:shadow-stone-800 hover:text-gray-500 ml-[16px] text-white inline-block before:top-[10px] before:my-0 before:absolute before:block  before:left-[60px] before:h-[50px] before:w-[50px] before:bg-no-repeat before:bg-[url('../../assets/page_cabinet/icons/delete.svg')]
+}
+
+.btnSettings {
+  @apply absolute w-[236px] mt-[75px] text-white ml-[-300px] rounded-lg bg-footer-gradient p-2 font-ProximSemiBold text-[16px] transition duration-300 ease-in-out shadow-md
+}
+
+.btnSettings:hover {
+  transition: 0.3s;
+  box-shadow: 0 0 14px #0c83ff;
 }
