--- a/src/components/Сabinet/Cabinet.module.css
+++ b/src/components/Сabinet/Cabinet.module.css
@@ -87,7 +87,7 @@
 }
 
 .btnSettings {
-  @apply absolute w-[236px] mt-[75px] text-white ml-[-300px] rounded-lg bg-footer-gradient p-2 font-ProximSemiBold text-[16px] transition duration-300 ease-in-out shadow-md
+  @apply relative w-[236px] mt-[15px] mx-[90px] text-white  rounded-lg bg-footer-gradient p-2 font-ProximSemiBold text-[16px] transition duration-300 ease-in-out shadow-md
 }
 
 .btnSettings:hover {
