--- a/src/pages/auth/recovery/recovery.module.css
+++ b/src/pages/auth/recovery/recovery.module.css
@@ -6,6 +6,10 @@
   @apply mb-8 text-center font-ProximExtraBold text-[32px] text-white;
 }
 
+.help {
+  @apply mb-8 text-center font-ProximSemiBold text-[20px] text-gray-400;
+}
+
 @media (max-width: 480px) {
   .section {
     @apply min-h-[120vh] pt-10;
