--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -122,7 +122,7 @@
   }
 
   .burger_menu_items a {
-    @apply cursor-pointer px-[16px] py-[8px];
+    @apply cursor-pointer px-[16px] text-2xl pl-60 py-[8px];
   }
 
   .close_button {
